# downloader

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt
example/src/: main.cpp
ext/: CMakeLists.txt  depzip.jsonc
lib/: CMakeLists.txt
lib/include/downloader/: curl.hpp  download.hpp  types.hpp
lib/include/downloader/http/: gateway.hpp  status.hpp  types.hpp
lib/src/: build_version.hpp.in  downloader.cpp
