if(DOWNLOADER_VENDOR_CURL)
  file(ARCHIVE_EXTRACT INPUT "${CMAKE_CURRENT_SOURCE_DIR}/src.zip" DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}")

  message(STATUS "[curl]")
  set(BUILD_EXAMPLES OFF)
  set(BUILD_TESTING OFF)
  set(BUILD_CURL_EXE OFF)
  set(BUILD_SHARED_LIBS OFF)
  set(BUILD_STATIC_LIBS ON)
  set(CURL_DISABLE_INSTALL ON)
  set(ENABLE_UNICODE ON)
  set(CURL_USE_PKGCONFIG OFF)
  set(BUILD_LIBCURL_DOCS OFF)
  set(BUILD_MISC_DOCS OFF)
  set(ENABLE_CURL_MANUAL OFF)
  set(BUILD_TESTING OFF)
  set(BUILD_EXAMPLES OFF)
  set(_CURL_PREFILL ON)
  set(PICKY_COMPILER OFF)
  add_subdirectory(src/curl)
endif()
